--- a/style.css
+++ b/style.css
@@ -54,7 +54,23 @@ h1 {
 }
 
 .card {
+    position: relative;
     padding: 10px 20px;
     background-color: white;
     border-radius: 10px;
+}
+
+.card::before {
+    content: "X";
+    position: absolute;
+    top: 5px;
+    right: 10px;
+
+    text-align: center;
+
+    width: 20px;
+    height: 20px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
 }
