--- a/style.css
+++ b/style.css
@@ -63,15 +63,19 @@ h1 {
 }
 
 .card::before {
-    content: "X";
+    font-family: 'Font Awesome 6 Free';
+    font-weight: 900;
+    -webkit-font-smoothing: antialiased;
+    content: '\f00d';
     position: absolute;
-    top: 5px;
+    top: 10px;
     right: 10px;
 
     text-align: center;
+    align-content: center;
 
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background-color: red;
     color: white;
     border-radius: 50%;
