--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1 {
     margin: 10px;
     float: left;
 
-    padding: 10px 20px;
+    padding: 10px 15px;
     background-color: rgba(255, 255, 255, 0.75);
     border-radius: 10px;
 }
@@ -67,7 +67,7 @@ h1 {
     background-color: white;
     border-radius: 10px;
 
-    margin: 15px;
+    margin-bottom: 15px;
 }
 
 .card::before {
