--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ main {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    padding: 8px;
+    padding: 75px 65px;
 }
 
 h1 {
