--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ h1 {
     padding: 10px 20px;
     background-color: rgba(17, 117, 162, 0.5);
     border-radius: 10px;
+
+    color: white;
 }
 
 #kanban {
