--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1 {
     overflow: hidden;
 }
 
-.column {
+#kanban .column {
     box-sizing: border-box;
     width: calc(20% - 20px);
     margin: 10px;
@@ -63,7 +63,7 @@ h1 {
     background-color: gold;
 }
 
-.card {
+#kanban .column .card {
     position: relative;
     padding: 10px 20px;
     background-color: white;
@@ -72,7 +72,7 @@ h1 {
     margin-bottom: 15px;
 }
 
-.card::before {
+#kanban .column .card::before {
     font-family: 'Font Awesome 6 Free';
     font-weight: 900;
     -webkit-font-smoothing: antialiased;
