--- a/style.css
+++ b/style.css
@@ -90,3 +90,16 @@ h1 {
     color: white;
     border-radius: 50%;
 }
+
+#kanban .column .card:hover {
+    background-color: rgba(17, 117, 162, 0.65);
+    color: white;
+}
+
+#kanban .column .card:hover::before {
+    background-color: black;
+}
+
+#kanban .column .card:hover .tags > .tag {
+    color: rgba(17, 117, 162);
+}
