--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ main {
     background-repeat: no-repeat;
     background-position: center;
     padding: 75px 65px;
+
+    min-height: 100vh;
 }
 
 h1 {
