--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ h1 {
 #kanban .column .card:hover {
     background-color: rgba(17, 117, 162, 0.65);
     color: white;
+    cursor: pointer;
 }
 
 #kanban .column .card:hover::before {
