--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ h1 {
     border-radius: 10px;
 }
 
+#kanban .column .card .tags {
+    margin-top: 35px;
+}
+
 #kanban .column .card .tags > .tag {
     padding: 10px;
     border-radius: 50%;
@@ -67,7 +71,7 @@ h1 {
 
 #kanban .column .card {
     position: relative;
-    padding: 30px 15px;
+    padding: 30px 25px;
     background-color: white;
     border-radius: 10px;
 
