--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@ body {
 }
 
 main {
-    background-image: url(background.jpg);
+    background-image: url('/resources/background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
