--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,4 @@
+@use 'variables';
 @use 'colors';
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
@@ -35,8 +36,8 @@ h1 {
 
     .column {
         box-sizing: border-box;
-        width: calc(20% - 20px);
-        margin: 10px;
+        width: calc(20% - 2 * variables.$kanban-column-margin);
+        margin: variables.$kanban-column-margin;
         float: left;
     
         padding: 10px 15px;
